--- a/DataBase/App.config
+++ b/DataBase/App.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="DataBase.Properties.Settings.DatabaseConnectionString"
+            connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="DataBase.Properties.Settings.Database1ConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database1.mdf;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
 </configuration>
