--- a/MainWindow/App.config
+++ b/MainWindow/App.config
@@ -7,14 +7,27 @@
         <bindings>
             <netTcpBinding>
                 <binding name="NetTcpBinding_IService" />
+                <binding name="NetTcpBinding_IService1">
+                   <!-- <security>
+                        <transport sslProtocols="None" />
+                    </security>
+                    -->
+                </binding>
             </netTcpBinding>
         </bindings>
         <client>
             <endpoint address="net.tcp://localhost:45617/" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_IService" contract="ServiceReference1.IService"
+                bindingConfiguration="NetTcpBinding_IService" contract="ServiceReference.IService"
                 name="NetTcpBinding_IService">
                 <identity>
                     <userPrincipalName value="LAPTOP-OCNC27SD\JesusHatesU" />
+                </identity>
+            </endpoint>
+            <endpoint address="net.tcp://localhost:8081/" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_IService1" contract="ServiceReference.IService"
+                name="NetTcpBinding_IService1">
+                <identity>
+                    <userPrincipalName value="LAPTOP-VFI7JDLB\Ilya" />
                 </identity>
             </endpoint>
         </client>
