--- a/MainWindow/App.config
+++ b/MainWindow/App.config
@@ -1,9 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <system.diagnostics>
+        <sources>
+            <source propagateActivity="true" name="System.ServiceModel" switchValue="Warning,ActivityTracing">
+                <listeners>
+                    <add type="System.Diagnostics.DefaultTraceListener" name="Default">
+                        <filter type="" />
+                    </add>
+                    <add name="ServiceModelTraceListener">
+                        <filter type="" />
+                    </add>
+                </listeners>
+            </source>
+            <source name="System.ServiceModel.MessageLogging" switchValue="Warning,ActivityTracing">
+                <listeners>
+                    <add type="System.Diagnostics.DefaultTraceListener" name="Default">
+                        <filter type="" />
+                    </add>
+                    <add name="ServiceModelMessageLoggingListener">
+                        <filter type="" />
+                    </add>
+                </listeners>
+            </source>
+        </sources>
+        <sharedListeners>
+            <add initializeData="C:\Users\JesusHatesU\Desktop\WOZAP\MainWindow\App_tracelog.svclog"
+                type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+                name="ServiceModelTraceListener" traceOutputOptions="Timestamp">
+                <filter type="" />
+            </add>
+            <add initializeData="C:\Users\JesusHatesU\Desktop\WOZAP\MainWindow\App_messages.svclog"
+                type="System.Diagnostics.XmlWriterTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+                name="ServiceModelMessageLoggingListener" traceOutputOptions="Timestamp">
+                <filter type="" />
+            </add>
+        </sharedListeners>
+        <trace autoflush="true" />
+    </system.diagnostics>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
     <system.serviceModel>
+        <diagnostics performanceCounters="Default">
+            <messageLogging logEntireMessage="true" logMalformedMessages="true"
+                logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true" />
+        </diagnostics>
         <bindings>
             <netTcpBinding>
                 <binding name="NetTcpBinding_IService" />
