--- a/MainWindow/App.config
+++ b/MainWindow/App.config
@@ -8,23 +8,15 @@
             <netTcpBinding>
                 <binding name="NetTcpBinding_IService" />
                 <binding name="NetTcpBinding_IService1">
-                   <!-- <security>
-                        <transport sslProtocols="None" />
-                    </security>
-                    -->
+                    <!--<security>
+                        <transport sslProtocols="none" />
+                    </security>-->
                 </binding>
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://localhost:45617/" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_IService" contract="ServiceReference.IService"
-                name="NetTcpBinding_IService">
-                <identity>
-                    <userPrincipalName value="LAPTOP-OCNC27SD\JesusHatesU" />
-                </identity>
-            </endpoint>
             <endpoint address="net.tcp://localhost:8081/" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_IService1" contract="ServiceReference.IService"
+                bindingConfiguration="NetTcpBinding_IService1" contract="ServiceChat.IService"
                 name="NetTcpBinding_IService1">
                 <identity>
                     <userPrincipalName value="LAPTOP-VFI7JDLB\Ilya" />
