--- a/MainWindow/MainWindow.csproj
+++ b/MainWindow/MainWindow.csproj
@@ -58,7 +58,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service References\ServiceReference\Reference.cs">
+    <Compile Include="Service References\ServiceChat\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -112,29 +112,29 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Service References\ServiceReference\item.xsd">
+    <None Include="Service References\ServiceChat\item.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\ServiceReference\item1.xsd">
+    <None Include="Service References\ServiceChat\item1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\ServiceReference\item2.xsd">
+    <None Include="Service References\ServiceChat\item2.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\ServiceReference\Service.wsdl" />
+    <None Include="Service References\ServiceChat\Service.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="images\Cancel.png" />
-    <None Include="Service References\ServiceReference\Reference.svcmap">
+    <None Include="Service References\ServiceChat\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-    <None Include="Service References\ServiceReference\configuration.svcinfo" />
-    <None Include="Service References\ServiceReference\configuration91.svcinfo" />
-    <None Include="Service References\ServiceReference\item.disco" />
+    <None Include="Service References\ServiceChat\configuration.svcinfo" />
+    <None Include="Service References\ServiceChat\configuration91.svcinfo" />
+    <None Include="Service References\ServiceChat\item.disco" />
     <None Include="images\Circle_Green.png" />
     <None Include="images\Circle_Red.png" />
     <Content Include="images\closeBig.png" />
@@ -153,7 +153,7 @@
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Service References\ServiceReference\" />
+    <WCFMetadataStorage Include="Service References\ServiceChat\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
