Небольшие доработки в UserWindow

--- a/MainWindow/App.config
+++ b/MainWindow/App.config
@@ -48,17 +48,13 @@
         <bindings>
             <netTcpBinding>
                 <binding name="NetTcpBinding_IService" />
-                <binding name="NetTcpBinding_IService1">
-                    <!--<security>
-                        <transport sslProtocols="none" />
-                    </security>-->
-                </binding>
+                <binding name="NetTcpBinding_IService1" />
             </netTcpBinding>
         </bindings>
         <client>
             <endpoint address="net.tcp://localhost:8081/" binding="netTcpBinding"
                 bindingConfiguration="NetTcpBinding_IService1" contract="ServiceChat.IService"
-                name="NetTcpBinding_IService1">
+                name="NetTcpBinding_IService">
                 <identity>
                     <userPrincipalName value="LAPTOP-VFI7JDLB\Ilya" />
                 </identity>
