--- a/MainWindow/App.config
+++ b/MainWindow/App.config
@@ -56,7 +56,7 @@
                 bindingConfiguration="NetTcpBinding_IService1" contract="ServiceChat.IService"
                 name="NetTcpBinding_IService">
                 <identity>
-                    <userPrincipalName value="LAPTOP-VFI7JDLB\Ilya" />
+                    <userPrincipalName value="LAPTOP-OCNC27SD\JesusHatesU" />
                 </identity>
             </endpoint>
         </client>
