--- a/MainWindow/App.config
+++ b/MainWindow/App.config
@@ -48,7 +48,11 @@
         <bindings>
             <netTcpBinding>
                 <binding name="NetTcpBinding_IService" />
-                <binding name="NetTcpBinding_IService1" />
+                <binding name="NetTcpBinding_IService1">
+                    <security>
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
             </netTcpBinding>
         </bindings>
         <client>
@@ -56,7 +60,7 @@
                 bindingConfiguration="NetTcpBinding_IService1" contract="ServiceChat.IService"
                 name="NetTcpBinding_IService">
                 <identity>
-                    <userPrincipalName value="LAPTOP-OCNC27SD\JesusHatesU" />
+                    <userPrincipalName value="LAPTOP-VFI7JDLB\Ilya" />
                 </identity>
             </endpoint>
         </client>
