--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 *.user
 *.userosscache
 *.sln.docstates
+.suo
+*.ide
+*.ide-shm
+*.ide-wal
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
