--- a/MainWindow/App.config
+++ b/MainWindow/App.config
@@ -48,11 +48,7 @@
         <bindings>
             <netTcpBinding>
                 <binding name="NetTcpBinding_IService" />
-                <binding name="NetTcpBinding_IService1">
-                    <security>
-                        <transport sslProtocols="None" />
-                    </security>
-                </binding>
+                <binding name="NetTcpBinding_IService1" />
             </netTcpBinding>
         </bindings>
         <client>
@@ -60,7 +56,7 @@
                 bindingConfiguration="NetTcpBinding_IService1" contract="ServiceChat.IService"
                 name="NetTcpBinding_IService">
                 <identity>
-                    <userPrincipalName value="LAPTOP-VFI7JDLB\Ilya" />
+                    <userPrincipalName value="LAPTOP-OCNC27SD\JesusHatesU" />
                 </identity>
             </endpoint>
         </client>
